# Chess-Video-Indexer

./: .dockerignore  .gitignore  .gitmodules  README.md  docker-compose.yml  test.txt
.github/workflows/: precode.yml  push.yml  pylint.yml
cicd/: precode.Jenkinsfile
services/cvi-monitor/: Dockerfile  precode.Dockerfile  pyproject.toml
services/cvi-monitor/cvi_monitor/: __main__.py  app_cli.py
services/cvi-monitor/monitor_server/: __main__.py  server.py
services/cvi-monitor/monitor_server/etc/: logging_utils.py
services/cvi-monitor/monitor_server/operators/: feed_handler.py  hello_world.py  youtube.py
services/cvi-monitor/tests/: test_hello_world.py
services/data/: .pylintrc  main.py  pom.xml  requirements.min.txt  requirements.txt
services/monitor/: .pylintrc  Dockerfile  api_version.py  cron.py  main.py  requirements.min.txt  requirements.txt
services/mysql/: Dockerfile  setup.sql
services/video-indexer/: board_detection.py  board_extractor.py  main.py
services/video_chess_indexer/: ballpit.py  board.py  convert.py  file_handler.py  game.py  game_handler.py  game_handler_old.py  game_old.py  game_start.py  highlight_squares.py  label.py  main.py  move.py  piece_id_lookups.py  square.py  validate.py  video_handler.py
services/video_indexer/: actual_board_detection.py
training_data_collector/: README.md  custom_data.yaml  darknetconvert.py  main.py  readme.txt  requirments.txt  vision.yaml
training_data_collector/chessdotcom/: actions.py  labelGame.py  labelgame.py  xpaths.py
training_data_collector/main/: darknetconvert.py  flags.py  (+3 more)
(+30 files in other folders)
