[tool.poetry]
name = "cvi-monitor"
version = "0.1.0"
description = "Monitoring Service for Chess Video Indexer"
authors = ["Jack Whelan <jackw97@live.ie>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)s][%(filename)s:%(funcName)s:%(lineno)s][%(asctime)s] %(message)s"
log_cli_format_date = "%Y-%m-%d %H:%M:%S"